Fix MS-Windows build broken by fixing bug #12776 on Posix platforms.
 src/w32proc.c (getpgrp, setpgid): New functions.

 nt/inc/unistd.h (setpgid, getpgrp): Provide prototypes.
 nt/config.nt (GETPGRP_VOID): Define to 1.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-01  Eli Zaretskii  <eliz@gnu.org>
+
+	* w32proc.c (getpgrp, setpgid): New functions.  (Bug#12776)
+
 2012-10-31  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Fix crash when using Emacs as commit editor for git (Bug#12697).
