--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,3 +1,9 @@
+2012-11-01  Eli Zaretskii  <eliz@gnu.org>
+
+	* inc/unistd.h (setpgid, getpgrp): Provide prototypes.  (Bug#12776)
+
+	* config.nt (GETPGRP_VOID): Define to 1.
+
 2012-10-24  Juanma Barranquero  <lekktu@gmail.com>
 
 	* config.nt: Sync with autogen/config.in.
