--- a/etc/NEWS
+++ b/etc/NEWS
@@ -21,6 +21,17 @@ When you add a new item, please add it without either +++ or ---
 so we will look at it and add it to the manual.
 
 
+* Installation Changes in Emacs 24.4
+* Startup Changes in Emacs 24.4
+* Changes in Emacs 24.4
+* Editing Changes in Emacs 24.4
+* Changes in Specialized Modes and Packages in Emacs 24.4
+* New Modes and Packages in Emacs 24.4
+* Incompatible Lisp Changes in Emacs 24.4
+* Lisp changes in Emacs 24.4
+* Changes in Emacs 24.4 on non-free operating systems
+
+
 * Installation Changes in Emacs 24.3
 
 ---
