--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-02  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (EMACS_ICON): New variable.
+	(install-etc): Use EMACS_ICON to allow choice of icon.
+
 2012-10-26  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in (EMACS_NAME): New variable.
