Undocument cl-floatp-safe, since it is no longer relevant
* doc/misc/cl.texi (Naming Conventions, Type Predicates, Macros)
(Predicates on Numbers): No longer mention cl-floatp-safe.

--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-02  Glenn Morris  <rgm@gnu.org>
+
+	* cl.texi (Naming Conventions, Type Predicates, Macros)
+	(Predicates on Numbers): No longer mention cl-floatp-safe.
+
 2012-11-01  Glenn Morris  <rgm@gnu.org>
 
 	* cl.texi: General copyedits for style, line-breaks, etc.
