--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-03  Glenn Morris  <rgm@gnu.org>
+
+	* cl.texi: Further general copyedits.
+
 2012-11-02  Glenn Morris  <rgm@gnu.org>
 
 	* cl.texi (Naming Conventions, Type Predicates, Macros)
