--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-11-03  Eli Zaretskii  <eliz@gnu.org>
+
+	* xdisp.c (init_from_display_pos): Fix initialization of the bidi
+	iterator when starting in the middle of a display or overlay
+	string.  (Bug#12745)
+
 2012-11-01  Eli Zaretskii  <eliz@gnu.org>
 
 	* w32proc.c (getpgrp, setpgid): New functions.  (Bug#12776)
