--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-03  Martin Rudalics  <rudalics@gmx.at>
+
+	* window.el (switch-to-visible-buffer)
+	(switch-to-buffer-preserve-window-point): Fix doc-strings.
+
 2012-11-01  Stephen Berman  <stephen.berman@gmx.net>
 
 	* play/gomoku.el (gomoku-display-statistics): Update mode line
