--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-11-03  Eli Zaretskii  <eliz@gnu.org>
+
+	* term/pc-win.el: Don't load term/internal from here.
+
+	* loadup.el: Load term/internal from here.
+
 2012-11-01  Stephen Berman  <stephen.berman@gmx.net>
 
 	* play/gomoku.el (gomoku-display-statistics): Update mode line
