--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,8 @@
 2012-11-03  Eli Zaretskii  <eliz@gnu.org>
 
+	* lisp.mk: Adjust comments to the fact that term/internal is now
+	loaded from loadup.el.
+
 	* msdos.c (msdos_abort): Rename from emacs_abort, and make static.
 	(msdos_fatal_signal): New function.
 	(XMenuActivate): Adjust the call to kbd_buffer_events_waiting to
