--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-03  Chong Yidong  <cyd@gnu.org>
+
+	* buffer.c (cursor_type): Untabify docstring.
+
 2012-11-03  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	* frame.h (struct frame): Drop can_have_scroll_bars member
