Fix a race condition in wait_reading_process_output (tiny change).
* src/process.c (wait_reading_process_output): Avoid a race condition
with SIGIO delivery.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-03  Jim Paris  <jim@jtan.com>  (tiny change)
+
+	* process.c (wait_reading_process_output): Avoid a race condition
+	with SIGIO delivery (Bug#11536).
+
 2012-11-03  Chong Yidong  <cyd@gnu.org>
 
 	* buffer.c (cursor_type): Untabify docstring.
